sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: Boolean(false) does not take parameters
       	       	 {     		         	
                 ^AlgCocktailSort1:21: error: Boolean(false) does not take parameters
	      {
              ^